Fixed many findbugs alerts. Added fluent api to the tests. Fixed style problems.